--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,6 @@
-<p>about works!</p>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-4">About Comics</h1>
+      <p class="lead">Una pagina web para conocer mas acerca de distintos heroes!</p>
+    </div>
+  </div>
